{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "0b8ab580-eab1-40e8-a440-76dc274bce69",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "27433eb3-3d5b-47d9-bd35-ee8b900bbf39",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f6ac3e25-4e68-4cfb-ad90-befa60c23f01",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "68941ed2-a16e-4fe6-87f4-fd386faa808c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "c86addc3-7a2a-4615-b2c8-7b43f5096a5b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8f329a6b-587a-47fb-b784-b95fda554751",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7aad691c-2d42-482c-84bd-3e4dbe76d925",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}